@@ -1950,3 +1950,10 @@ Fri Sep 17 13:04:10 PDT 1999
 (Mandrake)
 
 fixed a hard-to-find crashing bug in kde support
+
+-------------------------------------------------------------------------------
+
+Fri Sep 17 13:14:42 PDT 1999
+(Mandrake)
+
+titlebar updates update in the kpanel taskbar.
